feat: make fov observable

--- a/sbpt.ini
+++ b/sbpt.ini
@@ -1,4 +1,4 @@
 [subproject]
 export = fps_camera.hpp
-dependencies = transform, mouse
+dependencies = transform, mouse, observable
 tags = graphics
