feat!: constructor takes in w, h added base camera class

--- a/sbpt.ini
+++ b/sbpt.ini
@@ -1,4 +1,4 @@
 [subproject]
 export = fps_camera.hpp
-dependencies = transform, mouse, observable
+dependencies = transform, mouse, observable, linalg_utils
 tags = graphics
