logging: add logging in a few functions

--- a/sbpt.ini
+++ b/sbpt.ini
@@ -1,4 +1,4 @@
 [subproject]
 export = fps_camera.hpp
-dependencies = transform, mouse, observable, linalg_utils, logger, vertex_geometry
+dependencies = transform, mouse, observable, linalg_utils, logger, vertex_geometry, movement
 tags = graphics
